# mallard

./: Cargo.toml
examples/: orange.rs  white-noise.rs
src/: buffer.rs  canvas.rs  lib.rs
src/drawable/: clear.rs  drawable.rs  mod.rs
src/drawable/triangles/: mod.rs  unlit.frag  unlit.rs  unlit.vert
src/renderer/: basic.rs  headless.rs  mod.rs
src/texture/: mod.rs  rgba8_color.rs
src/vertex/: color_rgba.rs  mod.rs  position2d.rs  position3d.rs  tex_coord.rs
